--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "express": "^4.17.1",
     "node-fetch": "^3.0.0"
   }
