--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
-    "express": "^4.17.1",
-    "node-fetch": "^3.0.0"
+    "cheerio": "^1.0.0-rc.10",
+    "cross-fetch": "^3.1.4",
+    "express": "^4.17.1"
   }
 }
