--- a/server/config.example.json
+++ b/server/config.example.json
@@ -1,11 +1,17 @@
 {
   "debug": true,
   "debugPort": 3000,
+  "baseURL": "http://localhost:3000",
+  "cacheResetTime": 40,
 
   "sites": {
     "definiton": {
       "url": "https://dictionary.cambridge.org/dictionary/english/$word",
       "query": ".def"
+    },
+    "turkishDefinition": {
+      "url": "https://tureng.com/en/turkish-english/$word",
+      "query": ".tr a"
     },
     "synonym": {
       "url": "https://www.thesaurus.com/browse/$word",
