--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,16 @@
   "author": "Tuna Sayin",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "tsc && node ."
+  },
   "devDependencies": {
     "@types/express": "^4.17.13"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   }
 }
