--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/jquery": "^3.5.13",
-    "@types/node": "^16.11.25",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "cheerio": "^1.0.0-rc.10",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,13 +15,20 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.8",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-app-rewired": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/jquery": "^3.5.13",
+    "@types/node": "^16.11.25",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "client-start": "react-app-rewired start",
+    "client-build": "react-app-rewired build",
+    "server-start": "cd server && tsc && node dist/index.js"
   },
   "eslintConfig": {
     "extends": [
