--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^17.0.11"
   },
   "scripts": {
+    "start": "echo Building client... && react-app-rewired build && echo Client build process has been finished! && cd server && echo Building server.. && tsc && echo Server build process has been finished && echo Starting server.. && node dist/index.js",
     "client-start": "react-app-rewired start",
     "client-build": "react-app-rewired build",
     "server-start": "cd server && tsc && node dist/index.js"
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
