--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "word-scrapper-v2",
-  "version": "0.1.0",
-  "private": true,
+  "name": "word-scrapper",
+  "version": "0.1.2",
+  "private": false,
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "sass": "^1.49.8",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.8",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4",
-    "react-app-rewired": "^2.2.1"
-  },
-  "devDependencies": {
+    "react-app-rewired": "^2.2.1",
     "@types/jest": "^27.4.0",
     "@types/jquery": "^3.5.13",
     "@types/node": "^16.11.25",
@@ -39,6 +38,9 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "16.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
